use guest file system for class loading in espresso