@@ -30,14 +30,15 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.jar.JarFile;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
-
 import com.oracle.truffle.api.CompilerDirectives.TruffleBoundary;
+import com.oracle.truffle.api.TruffleFile;
 import com.oracle.truffle.espresso.classfile.ClasspathEntry;
 import com.oracle.truffle.espresso.classfile.ClasspathFile;
 import com.oracle.truffle.espresso.classfile.descriptors.ByteSequence;
@@ -57,10 +58,10 @@ public final class Classpath {
      */
     @TruffleBoundary
     public static ClasspathEntry createEntry(String name) {
-        final File pathFile = new File(name);
+        TruffleFile pathFile = EspressoContext.get(null).getEnv().getPublicTruffleFile(name);
         if (pathFile.isDirectory()) {
             return new Directory(pathFile);
-        } else if (pathFile.isFile()) {
+        } else if (pathFile.isRegularFile()) {
             // regular file.
             EspressoContext context = EspressoContext.get(null);
             if (context.getJavaVersion().modulesEnabled()) {
@@ -70,7 +71,9 @@ public final class Classpath {
                 }
             }
             try {
-                ZipFile zipFile = new JarFile(pathFile, false, OPEN_READ, context.getJavaVersion().toRunTimeVersion());
+                Path file = Files.createTempFile(null, null);
+                Files.write(file, pathFile.readAllBytes());
+                ZipFile zipFile = new JarFile(file.toFile(), false, OPEN_READ, context.getJavaVersion().toRunTimeVersion());
                 return new Archive(pathFile, zipFile);
             } catch (IOException ignored) {
             }
@@ -85,9 +88,9 @@ public final class Classpath {
      * archive file.
      */
     static final class PlainFile extends ClasspathEntry {
-        private final File file;
+        private final TruffleFile file;
 
-        PlainFile(File file) {
+        PlainFile(TruffleFile file) {
             this.file = file;
         }
 
@@ -97,8 +100,8 @@ public final class Classpath {
         }
 
         @Override
-        public File file() {
-            return file;
+        public String path() {
+            return file.getPath();
         }
     }
 
@@ -108,9 +111,9 @@ public final class Classpath {
     public static final class Directory extends ClasspathEntry {
         private static final boolean REPLACE_SEPARATOR = File.separatorChar != '/';
 
-        private final File directory;
+        private final TruffleFile directory;
 
-        public Directory(File directory) {
+        public Directory(TruffleFile directory) {
             // makes getParent work as expected with relative pathnames
             this.directory = directory.getAbsoluteFile();
         }
@@ -121,10 +124,11 @@ public final class Classpath {
             if (REPLACE_SEPARATOR) {
                 fsPath = fsPath.replace('/', File.separatorChar);
             }
-            final File file = new File(directory, fsPath);
+            TruffleFile file = directory.resolve(fsPath);
             if (file.exists()) {
                 try {
-                    return new ClasspathFile(Files.readAllBytes(file.toPath()), this, archiveName);
+                    byte[] bytes = file.readAllBytes();
+                    return new ClasspathFile(bytes, this, archiveName);
                 } catch (IOException ioException) {
                     return null;
                 }
@@ -133,8 +137,8 @@ public final class Classpath {
         }
 
         @Override
-        public File file() {
-            return directory;
+        public String path() {
+            return directory.getPath();
         }
 
         @Override
@@ -147,10 +151,10 @@ public final class Classpath {
      * Represents a classpath entry that is a path to an existing zip/jar archive file.
      */
     static final class Archive extends ClasspathEntry {
-        private final File file;
+        private final TruffleFile file;
         private final ZipFile zipFile;
 
-        Archive(File file, ZipFile zipFile) {
+        Archive(TruffleFile file, ZipFile zipFile) {
             this.file = file;
             this.zipFile = zipFile;
         }
@@ -168,8 +172,8 @@ public final class Classpath {
         }
 
         @Override
-        public File file() {
-            return file;
+        public String path() {
+            return file.getPath();
         }
 
         @Override
@@ -183,19 +187,19 @@ public final class Classpath {
      * Represents a classpath entry that is a path to a jimage modules file.
      */
     static final class Modules extends ClasspathEntry {
-        private final File file;
+        private final TruffleFile file;
         private final JImageHelper helper;
         private final JImageExtensions extensions;
 
-        Modules(File file, JImageHelper helper, JImageExtensions extensions) {
+        Modules(TruffleFile file, JImageHelper helper, JImageExtensions extensions) {
             this.file = file;
             this.helper = helper;
             this.extensions = extensions;
         }
 
         @Override
-        public File file() {
-            return file;
+        public String path() {
+            return file.getPath();
         }
 
         @Override
